progress, will now refac contextexpression