@@ -3,13 +3,14 @@ package com.dexels.navajo.parser.compiled;
 
 import java.util.List;
 import java.util.Optional;
+import java.util.function.Function;
 
 import com.dexels.navajo.document.types.Money;
 import com.dexels.navajo.document.types.Percentage;
 import com.dexels.navajo.expression.api.ContextExpression;
+import com.dexels.navajo.expression.api.FunctionClassification;
 import com.dexels.navajo.expression.api.TMLExpressionException;
 import com.dexels.navajo.parser.Utils;
-import com.dexels.navajo.parser.compiled.api.ParseMode;
 
 
 public final class ASTMulNode extends SimpleNode {
@@ -18,23 +19,23 @@ public final class ASTMulNode extends SimpleNode {
         super(id);
     }
 	@Override
-	public ContextExpression interpretToLambda(List<String> problems, String expression, ParseMode mode) {
+	public ContextExpression interpretToLambda(List<String> problems, String expression, Function<String, FunctionClassification> functionClassifier) {
 		// TODO We can do *some* type restriction, just not much.
-		return lazyBiFunction(problems,expression, (a,b)->interpret(a, b),(a,b)->true,(a,b)->Optional.empty(),mode);
+		return lazyBiFunction(problems,expression, (a,b)->interpret(a, b),(a,b)->true,(a,b)->Optional.empty(),functionClassifier);
 	}
 	
 	public  Object interpret(Object a, Object b) {
 
         if ((a instanceof Integer) && (b instanceof Integer))
-            return new Integer(((Integer) a).intValue() * ((Integer) b).intValue());
+            return  Integer.valueOf(((Integer) a).intValue() * ((Integer) b).intValue());
         else if ((a instanceof String) || (b instanceof String))
             throw new TMLExpressionException("Multiplication not defined for String values");
         else if (a instanceof Double && b instanceof Integer)
-            return new Double(((Double) a).doubleValue() * ((Integer) b).intValue());
+            return Double.valueOf(((Double) a).doubleValue() * ((Integer) b).intValue());
         else if (a instanceof Integer && b instanceof Double)
-            return new Double(((Double) b).doubleValue() * ((Integer) a).intValue());
+            return Double.valueOf(((Double) b).doubleValue() * ((Integer) a).intValue());
         else if (a instanceof Double && b instanceof Double)
-            return new Double(((Double) b).doubleValue() * ((Double) a).doubleValue());
+            return Double.valueOf(((Double) b).doubleValue() * ((Double) a).doubleValue());
         else if (a instanceof Money || b instanceof Money)
             return new Money(Utils.getDoubleValue(a) * Utils.getDoubleValue(b));
           else if (a instanceof Percentage || b instanceof Percentage)
